[metadata]
name = mm-format
version = 1.0
author = Tom Dodd
author_email = joedodd35@gmail.com
description = Format Python objects into Mathematica source strings.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomdodd4598/mm-format-python
project_urls =
    Issues = https://github.com/tomdodd4598/mm-format-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
